--- a/configs/best.cfg
+++ b/configs/best.cfg
@@ -2,20 +2,20 @@
 # Name of the experiment to run. All data would be stored
 # in a directory with this name, and the best checkpoint
 # Stored there also.
-exp_name = FreiburgMultimodalDetection_multiteacher_hellinger_efficientnet_all_embedding
+exp_name = MM-DistillNet
 log_path = tensorboard
 saved_path = "trained_models"
 fast_run = False
 
 # ================Input configuration====================
 # Dataset
-dataset=FreiburgMultimodalDetection
-data_path=/home/hurtadoj/ssMultiModal/FreiburgMultimodalDetection
-id_filter=None
+dataset=MultimodalDetection
+data_path=data
+#id_filter=None
+id_filter=.*drive_day_2020_04_21_15_58_22.*
 drive_type=all
 
-# Ignore sheep and bottle as target predictions,
-# EfficientDet can produce it but Yolo cannot
+# We are interested only in cars
 valid_labels=car
 
 # This decides if labels are taken from teacher or from the
@@ -28,18 +28,17 @@ use_depth=True
 use_rgb=True
 use_audio=False
 
-# The student is always single modality
+# We show compeling results on audio, but the technique
+# can be used for other modalities as well
 student_modality=audio
 
-# Sizes of the images. EfficientDet expects 512 and Yolo 416
+# Sizes of the images. Selected EfficientDet expect 768
 image_size = 768
 thermal_size = 768
 depth_size = 768
 audio_size = 768
 
-# Modalities to be used by the
-
-# Normalizes images to 1
+# Normalizes images to reduce exploding grads
 normalize=True
 
 # Transformations to use on each batched modality
@@ -48,9 +47,8 @@ val_transformations=Normalizer,Resizer
 
 # ================Train configuration====================
 # Make run reproducible. Lesser than zero ignore this setting
-seed = -24
+seed = 24
 
-# Batch size. EfficientDet can at most handle 32 wheras Yolo 80
 batch_size = 6
 
 # Enable Parallel Execution
@@ -59,21 +57,25 @@ num_workers=6
 engine=DataParallel
 #engine=DistributedDataParallel
 
-# Models. If _kaist is used, a pretrained version on Kaist
-# is used. That is, because original Kaist resolution is very
-# small a pretrain is needed
+# Teacher Network Type. Used for weights startup also
 teacher=YetAnotherEfficientDet_D2
-#student=YetAnotherEfficientDet_D2
+# The student uses an embedding to further improve audio-only
+# performance
 student=YetAnotherEfficientDet_D2_embedding
 features_from=efficientnet
 
 # Losses. Main loss provides classification and regression loss
-# Divergence loss enables a KL penalty on the model outputs
-# KD is the knowledge Distillation Loss at feature level
+# We do not find an ROI of using divergence loss nor adversarial
+# Our loss is the MTALossLoss
 main_loss=YetAnotherFocalLoss
 div_loss=None
-kd_loss=MTALossLoss
+kd_loss=MTALoss
 adv_loss=None
+T=9
+p=2
+
+# Data augmentation can further improve performance
+data_augment_shift=False
 
 # Weights to penalize more certain losses
 w_main=1.0
