--- a/configs/best.cfg
+++ b/configs/best.cfg
@@ -11,8 +11,7 @@ fast_run = False
 # Dataset
 dataset=MultimodalDetection
 data_path=data
-#id_filter=None
-id_filter=.*drive_day_2020_04_21_15_58_22.*
+id_filter=None
 drive_type=all
 
 # We are interested only in cars
