--- a/configs/best.cfg
+++ b/configs/best.cfg
@@ -42,8 +42,8 @@ audio_size = 768
 normalize=True
 
 # Transformations to use on each batched modality
-train_transformations=Normalizer,Resizer
-val_transformations=Normalizer,Resizer
+train_transformations=AudioAugmenter,Normalizer,Resizer
+val_transformations=AudioAugmenter,Normalizer,Resizer
 
 # ================Train configuration====================
 # Make run reproducible. Lesser than zero ignore this setting
