Go to mp3 to reduce space

--- a/configs/best.cfg
+++ b/configs/best.cfg
@@ -11,8 +11,7 @@ fast_run = False
 # Dataset
 dataset=MultimodalDetection
 data_path=data
-#id_filter=None
-id_filter=.*drive_day_2020_04_21_15_58_22.*
+id_filter=None
 drive_type=all
 
 # We are interested only in cars
@@ -42,14 +41,14 @@ audio_size = 768
 normalize=True
 
 # Transformations to use on each batched modality
-train_transformations=AudioAugmenter,Normalizer,Resizer
-val_transformations=AudioAugmenter,Normalizer,Resizer
+train_transformations=Normalizer,Resizer
+val_transformations=Normalizer,Resizer
 
 # ================Train configuration====================
 # Make run reproducible. Lesser than zero ignore this setting
 seed = 24
 
-batch_size = 6
+batch_size = 2
 
 # Enable Parallel Execution
 ngpu = 2
